Use upload-pages-artifact@v3 and deploy-pages@v3 to avoid deprecated artifact action

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,8 +28,8 @@ jobs:
           echo "No build step defined; deploying repo root"
 
       - name: Upload artifact for GitHub Pages
-        # use v2 which replaces deprecated v1/v1 alias and avoids artifact v3 deprecation
-        uses: actions/upload-pages-artifact@v2
+        # use v3 which avoids internal dependency on deprecated actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./
 
