--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [ main ]
+  # Disabled automatic push trigger to avoid duplicate runs. Leave manual dispatch to allow manual testing.
   workflow_dispatch: {}
 
 permissions:
