Add initial build script and project setup
Added package.json with build and deploy scripts, and a custom build.js script to copy project files to a build directory. Updated .gitignore to comment out previous rules, preparing for deployment and build process.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Ignore everything by default
-/*
+# # Ignore everything by default
+# /*
 
-# But keep these files at repo root so GitHub Pages can serve index.html
-!/index.html
-!/README.md
-!/LICENSE
-!/.gitignore
-!/.package.json
+# # But keep these files at repo root so GitHub Pages can serve index.html
+# !/index.html
+# !/README.md
+# !/LICENSE
+# !/.gitignore
+# !/.package.json
 
 # Keep GitHub metadata and CNAME if present
 !/.github/
