Refactor to external CSS and JS files
Moved inline styles and scripts from index.html to separate style.css and main.js files for better maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # !/README.md
 # !/LICENSE
 # !/.gitignore
-# !/.package.json
+# !/package.json
 
 # Keep GitHub metadata and CNAME if present
 !/.github/
